--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,12 @@ body {
     transform: translate3d(4px, 0, 0);
   }
 }
+
+.correctAnswer{
+  background-color: rgb(6, 240, 15);
+  border: 3px solid rgb(6, 240, 15);
+}
+.incorrectAnswer{
+  background-color: red;
+  border: 3px solid red;
+}
