--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 body {
+  background-color: #1b1f27;
+  font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
